# AdvancedSoftwareAssignments

./: b.bash  usefull_commands.bash
src/assign1/: CMakeLists.txt  package.xml
src/assign1/launch/: jiwy_traject.launch.py  light_check.launch.py
src/assign1/src/: jiwy_traject.cpp  light_check.cpp  light_position.cpp
src/assignment_one/: CMakeLists.txt  package.xml
src/assignment_one/include/assignment_one/: brightness_check.hpp  constants.hpp  jiwy_trajectory.hpp  light_position.hpp
src/assignment_one/launch/: brightness_check.launch.py  jiwy_trajctory.launch.py  jiwy_trajctory_camera.launch.py  jiwy_trajectory_camera.launch.py  jiwy_trajectory_unit_test.launch.py  light_position.launch.py
src/assignment_one/src/: brightness_check.cpp  jiwy_trajectory.cpp  light_position.cpp
src/assignment_three/: CMakeLists.txt  package.xml
src/assignment_three/launch/: closed_loop.launch.py
src/assignment_two/: info.md  timer  timer.c  timer.cpp  timing_test.cpp  timing_test_histogram.cpp
src/assignment_two/results/: laptop_results.txt  normal_stress (2).txt  plot_results.ipynb  xenomai_stress.txt
src/assignment_two/results/clean_data/: laptop_no_stress  laptop_stress  linux_no_stress  linux_stress  xenomai_no_stress  xenomai_stress
src/assignment_two/src/: timer  timer.cpp  timer2  timer2.cpp
src/cpp_pubsub/: package.xml
src/cpp_pubsub/src/: publisher_member_function.cpp
src/xenomai-ros2-framework/: CMakeLists.txt  jiwy_main.cpp
src/xenomai-ros2-framework/ControllerPan/: ControllerPan.cpp  ControllerPan.h  ControllerPan_tokens.xml  test_ControllerPan.cpp
src/xenomai-ros2-framework/ControllerPan/common/: EulerAngles.cpp  EulerAngles.h  MotionProfiles.cpp  MotionProfiles.h  xxfuncs.cpp  xxfuncs.h  xxinteg.cpp  xxinteg.h  xxinverse.cpp  xxinverse.h  xxmatrix.cpp  xxmatrix.h  xxmodel.h  xxtypes.h
src/xenomai-ros2-framework/ControllerTilt/: ControllerTilt.cpp  ControllerTilt.h  ControllerTilt_tokens.xml  test_ControllerTilt.cpp
src/xenomai-ros2-framework/ControllerTilt/common/: EulerAngles.cpp  EulerAngles.h  MotionProfiles.cpp  MotionProfiles.h  xxfuncs.cpp  xxfuncs.h  xxinteg.cpp  xxinteg.h  xxinverse.cpp  xxinverse.h  xxmatrix.cpp  xxmatrix.h  xxmodel.h  xxtypes.h
src/xenomai-ros2-framework/Plant/: Plant.cpp  Plant.h  Plant.info  Plant_tokens.xml  test_Plant.cpp
src/xenomai-ros2-framework/Plant/common/: EulerAngles.cpp  EulerAngles.h  MotionProfiles.cpp  MotionProfiles.h  xxfuncs.cpp  xxfuncs.h  xxinteg.cpp  xxinteg.h  xxinverse.cpp  xxinverse.h  xxmatrix.cpp  xxmatrix.h  xxmodel.h  xxtypes.h
src/xenomai-ros2-framework/Plant/project/VS2005/: Plant.sln  Plant.vcproj
src/xenomai-ros2-framework/Plant/project/VS2008/: Plant.sln  Plant.vcproj
src/xenomai-ros2-framework/Plant/project/VS2010/: Plant.sln  Plant.vcxproj
src/xenomai-ros2-framework/Plant/project/VS2012/: Plant.sln  Plant.vcxproj
src/xenomai-ros2-framework/Plant/project/VS2013/: Plant.sln  Plant.vcxproj  Plant.vcxproj.filters
src/xenomai-ros2-framework/Plant/project/VS2015/: Plant.sln  Plant.vcxproj
src/xenomai-ros2-framework/Plant/project/VS2017/: Plant.sln  Plant.vcxproj
src/xenomai-ros2-framework/Plant/project/VS2019/: Plant.sln  Plant.vcxproj
src/xenomai-ros2-framework/Plant/project/VS2022/: Plant.sln  Plant.vcxproj
