<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>assignment_one</name>
    <version>1.1.0</version>
    <description>This package contains three nodes that were designed for the assignments of the first assignment set of Advanced Software Development for Robotics.</description>
    <maintainer email="jvolbeda22@gmail.com">Jelmer Volbeda</maintainer>
    <maintainer email="j.h.j.pott@student.utwente.nl">Jurrijn Pott</maintainer>
    <license>BSD</license>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <depend>rclcpp</depend>
    <depend>rclcpp_components</depend>
    <depend>std_msgs</depend>
    <depend>sensor_msgs</depend>
    <depend>asdfr_interfaces</depend>

    <test_depend>ament_lint_auto</test_depend>
    <test_depend>ament_lint_common</test_depend>

    <exec_depend>ros2launch</exec_depend>

    <export>
    <build_type>ament_cmake</build_type>
    </export>
</package>
