<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>assignment_three</name>
    <version>1.0.0</version>
    <description>This package contains launch files.</description>
    <maintainer email="jvolbeda22@gmail.com">Jelmer Volbeda</maintainer>
    <maintainer email="j.h.j.pott@student.utwente.nl">Jurrijn Pott</maintainer>
    <license>BSD</license>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <test_depend>ament_lint_auto</test_depend>
    <test_depend>ament_lint_common</test_depend>

    <exec_depend>ros2launch</exec_depend>

    <export>
    <build_type>ament_cmake</build_type>
    </export>
</package>
